deploy-ui/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubeframe-ui
  name: kubeframe-ui
  namespace: $UI_NS
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: kubeframe-ui-tls
spec:
  internalTrafficPolicy: Cluster
  selector:
    app: kubeframe-ui
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 3000
  sessionAffinity: None
  type: ClusterIP
